# werewolf-game

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_access_keys.py  003_agent_reports.py  004_server_exceptions.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agents/: __init__.py  auth.py  gateway.py
backend/app/api/v1/: auth.py  games.py  reports.py  roles.py  rooms.py  server_exceptions.py  spectator.py  stats.py
backend/app/engine/: __init__.py  action_validator.py  game_engine.py  information_filter.py  night_resolver.py  state_machine.py  win_checker.py
backend/app/models/: __init__.py  access_key.py  action.py  agent.py  agent_report.py  event.py  game.py  player.py  room.py  server_exception.py  user.py
backend/app/roles/: __init__.py  base.py  guard.py  hunter.py  idiot.py  registry.py  seer.py  villager.py  werewolf.py  witch.py
backend/app/rooms/: __init__.py  manager.py
backend/app/scheduler/: __init__.py  timeout_scheduler.py
backend/app/schemas/: __init__.py  action.py  auth.py  event.py  game.py  report.py  role.py  room.py  server_exception.py  spectator.py
backend/app/security/: __init__.py  auth.py  rate_limiter.py
backend/app/spectator/: __init__.py  replay.py  service.py  stats.py
backend/app/utils/: exception_handler.py  helpers.py
backend/app/websocket/: __init__.py  event_bus.py  reconnection.py  server.py
backend/app/websocket/namespaces/: __init__.py  agent_ns.py  lobby_ns.py  spectator_ns.py
backend/data/: role_presets.json
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_auth.py  test_health.py  test_rooms_games.py  test_server_exceptions.py  test_spectator_stats.py
backend/tests/test_engine/: test_action_validator.py  test_information_filter.py  test_night_resolver.py  test_state_machine.py  test_timeout_scheduler.py  test_win_checker.py
backend/tests/test_roles/: test_roles.py
backend/tests/test_rooms/: test_room_manager.py
backend/tests/test_websocket/: test_event_bus.py  test_namespaces.py  test_reconnection.py  test_replay.py  test_stats.py
docs/: API.md  design-brief.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_agent.py  test_client.py  test_models.py
sdk/python/werewolf_arena/: __init__.py  agent.py  client.py  exceptions.py  models.py  utils.py
(+69 files in other folders)
